--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-name: John Smith
-description: "Nifty little description"
-url: ""
+name: Õı—ﬁ∑Ê
+description: °∞Handsome°±
+url: "www.baidu.com°±
 
 
 # Delete the lines you don't need
-email: your-email@example.domain
-github_username:  dashingcode
+email: 405069828@q.com
+github_username:  YanFengWang
 twitter_username: your_twitter_username_goes_here
 medium_username:  your_medium_username_goes_here
 # If you don't have a blog page delete the next line
