--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-name: Õı—ﬁ∑Ê
-description: °∞Handsome°±
-url: "www.baidu.com°±
+name: wangyanfeng
+description: aa
+url: ""
 
 
 # Delete the lines you don't need
-email: 405069828@q.com
+email: 405069828@qq.com
 github_username:  YanFengWang
 twitter_username: your_twitter_username_goes_here
 medium_username:  your_medium_username_goes_here
