--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-name: wangyanfeng
-description: aa
-url: ""
+name: 王艳锋
+description: 帅
+url: "www.baidu.com"
 
 
 # Delete the lines you don't need
