--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "www.baidu.com"
 
 # Delete the lines you don't need
 email: 405069828@qq.com
-github_username:  YanFengWang
+github_username:  YanFengWang/YanFengWang.github.io
 twitter_username: your_twitter_username_goes_here
 medium_username:  your_medium_username_goes_here
 # If you don't have a blog page delete the next line
